--- a/index.html
+++ b/index.html
@@ -38,3 +38,37 @@
         <button class="banner-btn">shop now</button>
       </div>
     </header>
+    <!-- end of hero -->
+
+    <!-- products -->
+    <section class="products">
+        <div class="section-title">
+          <h2>our products</h2>
+        </div>
+        <div class="products-center">
+          <!-- single product -->
+          <!-- <article class="product">
+            <div class="img-container">
+              <img
+                src="./images/product-1.jpeg"
+                alt="product"
+                class="product-img"
+              />
+              <button class="bag-btn" data-id="1">
+                <i class="fas fa-shopping-cart"></i>
+                add to bag
+              </button>
+            </div>
+            <h3>queen bed</h3>
+            <h4>$16</h4>
+          </article> -->
+          <!-- end of single product -->
+        </div>
+      </section>
+      <!-- end of products -->
+      <!-- cart -->
+      <div class="cart-overlay">
+        <div class="cart">
+          <span class="close-cart"><i class="far fa-window-close"></i></span>
+          <h2>your cart</h2>
+          <div class="cart-content">
